# manager/delivery/httpserver/sourcehandler/route.go
@@ -10,5 +10,9 @@ func (h Handler) SetRoutes(e *echo.Echo) {
 	sourceGroups.GET("", h.List)
 	sourceGroups.POST("", h.Create)
 	sourceGroups.POST("/:sourceID", h.Update)
+	sourceGroups.GET("/:sourceID", h.Show)
+	sourceGroups.GET("/:sourceID/rotate-write-key", h.RotateWriteKey)
+	sourceGroups.GET("/:sourceID/enable", h.Enable)
+	sourceGroups.GET("/:sourceID/disable", h.Disable)
 	sourceGroups.DELETE("/:sourceID", h.Delete)
 }
